Add feature TypeORM, Inject Dependecy, Docker, JTW, AppErros
